--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "2.1.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.7.0",
+    "serialize-javascript": ">=2.1.1",
     "style-loader": "1.0.1",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.8"
